--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
         </div>
     </section>
-    <img src="./assets/arrow.png" class="icon arrow" onclick="location.href='./#abouts'" alt="" />
+    <img src="./assets/arrow.png" class="icon arrow" onclick="location.href='./#about'" alt="" />
     <section id="about">
         <p class="section__text__p1">Get To Know More</p>
         <h1 class="title">About Me</h1>
