--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         and learning. I thrive on teams that values innovation, embraces challenges, and believes in the
                         power of
                         continuous growth. My goal is to contribute to an organization where technical expertise meets
-                        creativity. I am excited to collaborate with others to push boundaries together.
+                        creativity. I am excited to collaborate with others to push boundaries together!
                     </p>
                 </div>
             </div>
